fix- gap added between buttons

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 .container{
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -318,6 +319,7 @@
     display: flex;
     margin-right: 30px;
     justify-content: space-between;
+    gap: 10px;
 }
 .button-27 {
     display: flex;
@@ -330,7 +332,7 @@
     color: #FFFFFF;
     cursor: pointer;
     display: inline-block;
-    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-family: "Alan Sans", Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     font-size: 15px;
     font-weight: 600;
     line-height: normal;
